# tomviz

./: .azure-pipelines.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  AboutDialog.ui  ActiveObjects.cxx  ActiveObjects.h  AddAlignReaction.cxx  AddExpressionReaction.cxx  AddExpressionReaction.h  AddPythonTransformReaction.cxx  AddPythonTransformReaction.h  AddReconstructReaction.cxx  AddReconstructReaction.h  AlignWidget.cxx  AlignWidget.h  BUILDING.md  Behaviors.cxx  Behaviors.h  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  CentralWidget.cxx  CentralWidget.h  CentralWidget.ui  CloneDataReaction.cxx  CloneDataReaction.h  ComputeHistogram.h  DataPropertiesPanel.cxx  DataPropertiesPanel.h  DataPropertiesPanel.ui  DataSource.cxx  DataSource.h  EditPythonOperatorDialog.cxx  EditPythonOperatorDialog.h  EditPythonOperatorDialog.ui  LICENSE  LoadDataReaction.cxx  (+65 more)
dax/: AcceleratedAlgorithms.xml  CMakeLists.txt  DataSetConverters.h  MatVizStreaming.xml  MatVizThreshold.xml  ModuleAccelContour.cxx  ModuleAccelContour.h  ModuleAccelThreshold.cxx  ModuleAccelThreshold.h  ModuleStreamingContour.cxx  ModuleStreamingContour.h  Readme.md  StreamingContour.xml  SubdividedVolume.h  SubdividedVolume.txx  Todo.md  TomVizStreaming.xml  Worklets.h  plugins.in  vtkAccelContour.cxx  vtkAccelContour.h  vtkAccelThreshold.cxx  vtkAccelThreshold.h  vtkStreamingContourRepresentation.cxx  vtkStreamingContourRepresentation.h  vtkStreamingContourWorker.cxx  vtkStreamingContourWorker.h  vtkStreamingThresholdRepresentation.cxx  vtkStreamingThresholdRepresentation.h  vtkStreamingThresholdWorker.cxx  vtkStreamingThresholdWorker.h  vtkStreamingWorker.cxx  vtkStreamingWorker.h
tests/cxx/: AcquisitionClientTest.cxx  CMakeLists.txt  CxxTests.cmake  DockerUtilitiesTest.cxx  InterfaceBuilderTest.cxx  ModulePlotTest.cxx  OperatorPythonTest.cxx  PipelineExecutionTest.cxx  PtychoWorkflowTest.cxx  PyXRFWorkflowTest.cxx  ScanIDTest.cxx  TomvizTest.h.in  Tvh5DataTest.cxx  UtilitiesTest.cxx  VariantTest.cxx
tomviz/: AboutDialog.cxx  AboutDialog.h  AboutDialog.ui  AbstractDataModel.cxx  AbstractDataModel.h  AcquisitionClient.cxx  AcquisitionClient.h  AcquisitionWidget.cxx  AcquisitionWidget.h  AcquisitionWidget.ui  ActiveObjects.cxx  ActiveObjects.h  AddAlignReaction.cxx  AddAlignReaction.h  AddExpressionReaction.cxx  AddExpressionReaction.h  AddPythonTransformReaction.cxx  AddPythonTransformReaction.h  AddRenderViewContextMenuBehavior.cxx  AddRenderViewContextMenuBehavior.h  AddResampleReaction.cxx  AddResampleReaction.h  AddRotateAlignReaction.cxx  AddRotateAlignReaction.h  AlignWidget.cxx  AlignWidget.h  AnimationHelperDialog.cxx  AnimationHelperDialog.h  AnimationHelperDialog.ui  ArrayWranglerReaction.cxx  ArrayWranglerReaction.h  AxesReaction.cxx  AxesReaction.h  BadStackDialog.cxx  BadStackDialog.h  BadStackDialog.ui  Behaviors.cxx  Behaviors.h  BrightnessContrastWidget.cxx  BrightnessContrastWidget.h  (+405 more)
tomviz/acquisition/: AcquisitionClient.cxx  AcquisitionClient.h  AcquisitionWidget.cxx  AcquisitionWidget.h  AcquisitionWidget.ui  AdvancedFormatWidget.cxx  AdvancedFormatWidget.h  AdvancedFormatWidget.ui  BasicFormatWidget.cxx  BasicFormatWidget.h  BasicFormatWidget.ui  CMakeLists.txt  Connection.cxx  Connection.h  ConnectionDialog.cxx  ConnectionDialog.h  ConnectionDialog.ui  ConnectionsWidget.cxx  ConnectionsWidget.h  ConnectionsWidget.ui  CustomFormatWidget.cxx  CustomFormatWidget.h  CustomFormatWidget.ui  JsonRpcClient.cxx  JsonRpcClient.h  MatchInfo.h  PassiveAcquisitionWidget.cxx  PassiveAcquisitionWidget.h  PassiveAcquisitionWidget.ui  RegexGroupDialog.cxx  RegexGroupDialog.h  RegexGroupDialog.ui  RegexGroupSubstitution.cxx  RegexGroupSubstitution.h  RegexGroupSubstitutionDialog.cxx  RegexGroupSubstitutionDialog.h  RegexGroupSubstitutionDialog.ui  RegexGroupsSubstitutionsWidget.cxx  RegexGroupsSubstitutionsWidget.h  RegexGroupsSubstitutionsWidget.ui  (+6 more)
tomviz/animations/: ContourAnimation.h  ModuleAnimation.h  SliceAnimation.h
tomviz/core/: CMakeLists.txt  DataSourceBase.h  DataSourceProxyBase.h  OperatorProxyBase.h  PipelineProxyBase.h  PythonFactory.cxx  PythonFactory.h  Variant.h
tomviz/dax/: DataSetConverters.h  ModuleAccelThreshold.cxx  ModuleAccelThreshold.h  ModuleStreamingContour.cxx  ModuleStreamingContour.h  SubdividedVolume.h  SubdividedVolume.txx  TomVizStreaming.xml  Worklets.h  vtkAccelThreshold.cxx  vtkAccelThreshold.h  vtkStreamingContourRepresentation.cxx  vtkStreamingContourRepresentation.h  vtkStreamingThresholdRepresentation.cxx  vtkStreamingThresholdRepresentation.h  vtkStreamingWorker.cxx  vtkStreamingWorker.h
tomviz/h5cpp/: CMakeLists.txt  h5capi.h  h5reader.cpp  h5reader.h  h5readwrite.cpp  h5readwrite.h  h5typemaps.h  h5vtktypemaps.h  hidcloser.h
tomviz/icons/: CMakeLists.txt  dummy.cxx  tomviz.rc
tomviz/loguru/: README  loguru.cpp
tomviz/modules/: Module.cxx  Module.h  ModuleClip.cxx  ModuleClip.h  ModuleContour.cxx  ModuleContour.h  ModuleContourWidget.cxx  ModuleContourWidget.h  ModuleContourWidget.ui  ModuleFactory.cxx  ModuleFactory.h  ModuleManager.cxx  ModuleManager.h  ModuleMenu.cxx  ModuleMenu.h  ModuleMolecule.cxx  ModuleMolecule.h  ModuleOrthogonalSlice.cxx  ModuleOrthogonalSlice.h  ModuleOutline.cxx  ModuleOutline.h  ModulePlot.cxx  ModulePlot.h  ModulePropertiesPanel.cxx  ModulePropertiesPanel.h  ModulePropertiesPanel.ui  ModuleRuler.cxx  ModuleRuler.h  ModuleScaleCube.cxx  ModuleScaleCube.h  ModuleScaleCubeWidget.cxx  ModuleScaleCubeWidget.h  ModuleScaleCubeWidget.ui  ModuleSegment.cxx  ModuleSegment.h  ModuleSlice.cxx  ModuleSlice.h  ModuleThreshold.cxx  ModuleThreshold.h  ModuleVolume.cxx  (+8 more)
tomviz/operators/: ArrayWranglerOperator.cxx  ArrayWranglerOperator.h  ConvertToFloatOperator.cxx  ConvertToFloatOperator.h  ConvertToVolumeOperator.cxx  ConvertToVolumeOperator.h  CropOperator.cxx  CropOperator.h  CustomPythonOperatorWidget.cxx  CustomPythonOperatorWidget.h  EditOperatorDialog.cxx  EditOperatorDialog.h  EditOperatorWidget.cxx  EditOperatorWidget.h  EditPythonOperatorWidget.ui  Operator.cxx  Operator.h  OperatorDialog.cxx  (+25 more)
(+422 files in other folders)
